@@ -3,7 +3,6 @@ package org.bardframework.validator.field.collection;
 import org.bardframework.validator.FieldValueHolder;
 import org.bardframework.validator.field.SingleFieldValidatorAbstract;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -31,6 +30,6 @@ public class CollectionMaxSizeValidator extends SingleFieldValidatorAbstract<Col
 
     @Override
     protected List<Object> getArgs(FieldValueHolder<Collection<?>> fieldValue) {
-        return Arrays.asList(fieldValue.translateFieldName(messageSource, this.getLocale()), max);
+        return List.of(fieldValue.translateFieldName(messageSource, this.getLocale()), max);
     }
 }
