@@ -3,7 +3,6 @@ package org.bardframework.validator.field.number;
 import org.bardframework.validator.FieldValueHolder;
 import org.bardframework.validator.field.SingleFieldValidatorAbstract;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -30,6 +29,6 @@ public class LongBetweenValidator extends SingleFieldValidatorAbstract<Long> {
 
     @Override
     protected List<Object> getArgs(FieldValueHolder<Long> fieldValue) {
-        return Arrays.asList(fieldValue.translateFieldName(messageSource, this.getLocale()), min, max);
+        return List.of(fieldValue.translateFieldName(messageSource, this.getLocale()), min, max);
     }
 }
